fix: button heights on mobile screens

--- a/src/components/modals/MintNftModal.scss
+++ b/src/components/modals/MintNftModal.scss
@@ -1,4 +1,8 @@
 .MintNftModal {
+  .button {
+    height: 64px !important;
+  }
+
   .InfoBanner {
     padding: 12px;
 
